# Swindle-VX

./: .env.example  .gitignore  BUILD.md  BUTTON_CONNECTION_STATUS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  README.md  STATIC_SCAN_REPORT.md  UI_BACKEND_CONNECTION.md  VOICE_MODEL_SETUP.md  index.html  package-lock.json  package.json  readme  tailwind.config.cjs  test-fish-api.js
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/AI/: ONNXInference.cpp  ONNXInference.h
plugin/Source/DSP/: F0Extractor.cpp  F0Extractor.h  LPCAnalyzer.cpp  LPCAnalyzer.h  MelSpectrogram.cpp  MelSpectrogram.h  OfflineVoiceProcessor.cpp  OfflineVoiceProcessor.h  PitchCorrector.cpp  PitchCorrector.h  PitchDetector.cpp  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  TransientDetector.cpp  TransientDetector.h  VoiceCharacter.cpp  VoiceCharacter.h
src/: App.tsx  index.css
src/components/plugin/: Knob.tsx  PianoRoll.tsx  SwindlVX.tsx  Visualizers.tsx  VoiceSettings.tsx
src/lib/: AudioEngine.ts  Presets.ts  blink.ts  fish-audio.ts  juce-bridge.ts
